lib/tests/fixtures/compiler/parser/next_in_resource_defaults.baseline
Error: next_in_resource_defaults.pp:3:26: next statement cannot be used inside a resource defaults expression.
  bar => if true { next }
                   ^~~~
