lib/tests/fixtures/compiler/parser/next_in_resource_defaults.pp
[].each |$x| {
    File {
        bar => if true { next }
    }
}
